--- a/nextjs-blog/styles/utils.module.css
+++ b/nextjs-blog/styles/utils.module.css
@@ -39,14 +39,16 @@
   
   .list {
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 0; 
   }
-  
   .listItem {
     margin: 0 0 1.25rem;
   }
   
   .lightText {
     color: #666;
+  }
+
+  .bold{
+    font-weight: bolder;
   }
